--- a/src/main/resources/templates/editStudent.html
+++ b/src/main/resources/templates/editStudent.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -14,17 +12,19 @@
 </head>
 <body>
 <!-- Main Body of Page -->
+
 <div class="container">
     <div class="row m-4">
         <div class="col text-center border border-dark">
-            <h1>Course Manager</h1>
+            <h1><a href="/" class="text-dark">Course Manager</a></h1>
         </div>
     </div>
-
     <div class="row m-4 border border-dark">
+
         <div class="col text-center m-3">
             <a href="/" class="btn btn-outline-primary btn-lg">Home</a>
         </div>
+
         <div class="col text-center m-3">
             <a href="teachers" class="btn btn-outline-primary btn-lg">Teachers</a>
         </div>
@@ -35,70 +35,33 @@
             <a href="courses" class="btn btn-outline-primary btn-lg">Courses</a>
         </div>
     </div>
-
     <div class="row m-4 border border-dark">
         <div class="col-3 text-center m-3">
-            <span class="h3">Add Teacher</span>
+            <span class="h3">Edit Student</span>
         </div>
         <div class="col-7 text-center m-3">
-            <form action="addTeacher" method="POST">
+            <form action="editStudent" method="POST">
                 <div class="form-group row">
                     <label for="firstName" class="col-3 col-form-label">
                         First Name</label>
                     <div class="col-9">
-                        <input type="text" name="firstName"
-                               id="firstName" class="form-control"/>
+                        <input type="text" name="firstName" id="firstName"
+                               class="form-control" th:value="${student.firstName}"/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="lastName" class="col-3 col-form-label">
                         Last Name</label>
                     <div class="col-9">
-                        <input type="text" name="lastName"
-                               id="lastName" class="form-control"/>
+                        <input type="text" name="lastName" id="lastName"
+                               class="form-control"  th:value="${student.lastName}"/>
                     </div>
                 </div>
-                <div class="form-group row">
-                    <label for="specialty" class="col-3 col-form-label">
-                        Specialty</label>
-                    <div class="col-9">
-                        <input type="text" name="specialty"
-                               id="specialty" class="form-control"/>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Add Teacher</button>
+                <input type="hidden" name="id" th:value="${student.id}"/>
+                <button type="submit" class="btn btn-primary">Update Student</button>
             </form>
         </div>
     </div>
-
-
-    <div class="row m-4 border border-dark">
-        <div class="col text-center m-3">
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Specialty</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="teacher : ${teachers}">
-                    <td th:text="${teacher.id}">Teacher ID</td>
-                    <td th:text="${teacher.firstName}">Teacher First Name</td>
-                    <td th:text="${teacher.lastName}">Teacher Last Name</td>
-                    <td th:text="${teacher.specialty}">Teacher Specialty</td>
-                    <td><a href="#" th:href="@{/editTeacher(id=${teacher.id})}">Edit</a></td>
-                    <td><a href="#" th:href="@{/deleteTeacher(id=${teacher.id})}">Delete</a></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
 </div>
 <!-- End main body -->
 
@@ -109,6 +72,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>;
-
-
 
