--- a/src/main/resources/templates/editTeacher.html
+++ b/src/main/resources/templates/editTeacher.html
@@ -15,10 +15,14 @@
 <div class="container">
     <div class="row m-4">
         <div class="col text-center border border-dark">
-            <h1><a href="/" class="text-dark">Course Manager</a></h1>
+            <h1>Course Manager</h1>
         </div>
     </div>
+
     <div class="row m-4 border border-dark">
+        <div class="col text-center m-3">
+            <a href="/" class="btn btn-outline-primary btn-lg">Home</a>
+        </div>
         <div class="col text-center m-3">
             <a href="teachers" class="btn btn-outline-primary btn-lg">Teachers</a>
         </div>
