--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -14,10 +12,11 @@
 </head>
 <body>
 <!-- Main Body of Page -->
+
 <div class="container">
     <div class="row m-4">
         <div class="col text-center border border-dark">
-            <h1>Course Manager</h1>
+            <h1><a href="/" class="text-dark">Course Manager</a></h1>
         </div>
     </div>
 
@@ -25,6 +24,7 @@
         <div class="col text-center m-3">
             <a href="/" class="btn btn-outline-primary btn-lg">Home</a>
         </div>
+
         <div class="col text-center m-3">
             <a href="teachers" class="btn btn-outline-primary btn-lg">Teachers</a>
         </div>
@@ -38,10 +38,10 @@
 
     <div class="row m-4 border border-dark">
         <div class="col-3 text-center m-3">
-            <span class="h3">Add Teacher</span>
+            <span class="h3">Add Student</span>
         </div>
         <div class="col-7 text-center m-3">
-            <form action="addTeacher" method="POST">
+            <form action="addStudent" method="POST">
                 <div class="form-group row">
                     <label for="firstName" class="col-3 col-form-label">
                         First Name</label>
@@ -58,19 +58,10 @@
                                id="lastName" class="form-control"/>
                     </div>
                 </div>
-                <div class="form-group row">
-                    <label for="specialty" class="col-3 col-form-label">
-                        Specialty</label>
-                    <div class="col-9">
-                        <input type="text" name="specialty"
-                               id="specialty" class="form-control"/>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Add Teacher</button>
+                <button type="submit" class="btn btn-primary">Add Student</button>
             </form>
         </div>
     </div>
-
 
     <div class="row m-4 border border-dark">
         <div class="col text-center m-3">
@@ -80,26 +71,28 @@
                     <th>ID</th>
                     <th>First Name</th>
                     <th>Last Name</th>
-                    <th>Specialty</th>
                     <th>Edit</th>
                     <th>Delete</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="teacher : ${teachers}">
-                    <td th:text="${teacher.id}">Teacher ID</td>
-                    <td th:text="${teacher.firstName}">Teacher First Name</td>
-                    <td th:text="${teacher.lastName}">Teacher Last Name</td>
-                    <td th:text="${teacher.specialty}">Teacher Specialty</td>
-                    <td><a href="#" th:href="@{/editTeacher(id=${teacher.id})}">Edit</a></td>
-                    <td><a href="#" th:href="@{/deleteTeacher(id=${teacher.id})}">Delete</a></td>
+                <tr th:each="student : ${students}">
+                    <td th:text="${student.id}">Teacher ID</td>
+                    <td th:text="${student.firstName}">Teacher First Name</td>
+                    <td th:text="${student.lastName}">Teacher Last Name</td>
+                    <td><a href="#" th:href="@{/editStudent(id=${student.id})}">Edit</a></td>
+                    <td><a href="#" th:href="@{/deleteStudent(id=${student.id})}">Delete</a></td>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
 
+
+
+
 </div>
+
 <!-- End main body -->
 
 <!-- Optional JavaScript -->
@@ -109,6 +102,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>;
-
-
 
